--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -10,6 +10,11 @@
     "vercel-build": "npm run build"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.2",
+    "@mui/material": "^7.1.2",
+    "@mui/system": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
