fix: Configure base paths for sub-apps to fix asset loading

--- a/vercel.json
+++ b/vercel.json
@@ -26,14 +26,21 @@
     }
   ],
   "routes": [
-    { "src": "/assets/(.*)", "dest": "/apps/main/assets/$1" },
+    { "src": "/notes/assets/(.*)", "dest": "/packages/week2/task1/frontend/assets/$1" },
     { "src": "/notes", "dest": "/packages/week2/task1/frontend/index.html" },
     { "src": "/notes/(.*)", "dest": "/packages/week2/task1/frontend/$1" },
+    
+    { "src": "/shopping-cart/assets/(.*)", "dest": "/packages/week3/task1/assets/$1" },
     { "src": "/shopping-cart", "dest": "/packages/week3/task1/index.html" },
     { "src": "/shopping-cart/(.*)", "dest": "/packages/week3/task1/$1" },
+    
+    { "src": "/performance-fixes/static/(.*)", "dest": "/packages/week5/task/static/$1" },
     { "src": "/performance-fixes", "dest": "/packages/week5/task/index.html" },
     { "src": "/performance-fixes/(.*)", "dest": "/packages/week5/task/$1" },
+    
     { "src": "/api/(.*)", "dest": "/packages/week2/task3/modern-app/$1" },
+    
+    { "src": "/assets/(.*)", "dest": "/apps/main/assets/$1" },
     { "src": "/(.*)", "dest": "/apps/main/$1" }
   ]
 }
