--- a/packages/week5/task/package.json
+++ b/packages/week5/task/package.json
@@ -2,6 +2,7 @@
   "name": "react-shopping-cart",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/performance-fixes",
   "engines": {
     "node": ">=18.0.0"
   },
