--- a/vercel.json
+++ b/vercel.json
@@ -41,6 +41,7 @@
     { "src": "/api/(.*)", "dest": "/packages/week2/task3/modern-app/$1" },
     
     { "src": "/assets/(.*)", "dest": "/apps/main/assets/$1" },
+    { "src": "/task/(.*)", "dest": "/apps/main/index.html" },
     { "src": "/(.*)", "dest": "/apps/main/$1" }
   ]
 }
