fix: Add proper build scripts for notes app and API

--- a/packages/week2/task3/modern-app/package.json
+++ b/packages/week2/task3/modern-app/package.json
@@ -7,7 +7,8 @@
     "start": "tsc && node dist/server.js",
     "dev": "ts-node-dev --respawn src/server.ts",
     "test": "jest",
-    "build": "echo 'Build completed - Express backend ready'"
+    "build": "tsc",
+    "vercel-build": "npm run build"
   },
   "author": "Your Name",
   "license": "MIT",
