--- a/vercel.json
+++ b/vercel.json
@@ -38,6 +38,7 @@
     { "src": "/performance-fixes", "dest": "/packages/week5/task/index.html" },
     { "src": "/performance-fixes/(.*)", "dest": "/packages/week5/task/$1" },
     
+    { "src": "/api", "dest": "/packages/week2/task3/modern-app/api/index.js" },
     { "src": "/api/(.*)", "dest": "/packages/week2/task3/modern-app/api/index.js" },
     
     { "src": "/assets/(.*)", "dest": "/apps/main/assets/$1" },
