--- a/packages/week2/task1/backend/package.json
+++ b/packages/week2/task1/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon src/server.ts",
     "build": "tsc",
+    "vercel-build": "npm run build",
     "start": "node dist/server.js",
     "test": "jest",
     "test:watch": "jest --watch",
