--- a/vercel.json
+++ b/vercel.json
@@ -23,6 +23,10 @@
     {
       "src": "packages/week2/task1/backend/api/index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "packages/week2/task3/modern-app/api/index.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
@@ -39,8 +43,11 @@
     { "src": "/performance-fixes", "dest": "/packages/week5/task/index.html" },
     { "src": "/performance-fixes/(.*)", "dest": "/packages/week5/task/$1" },
     
-    { "src": "/api/(.*)", "dest": "/packages/week2/task1/backend/api/index.js" },
-    { "src": "/api", "dest": "/packages/week2/task1/backend/api/index.js" },
+    { "src": "/api/auth/(.*)", "dest": "/packages/week2/task1/backend/api/index.js" },
+    { "src": "/api/notes/(.*)", "dest": "/packages/week2/task1/backend/api/index.js" },
+    { "src": "/api/notes", "dest": "/packages/week2/task1/backend/api/index.js" },
+    { "src": "/api/(.*)", "dest": "/packages/week2/task3/modern-app/api/index.js" },
+    { "src": "/api", "dest": "/packages/week2/task3/modern-app/api/index.js" },
     
     { "src": "/assets/(.*)", "dest": "/apps/main/assets/$1" },
     { "src": "/task/(.*)", "dest": "/apps/main/index.html" },
