--- a/vercel.json
+++ b/vercel.json
@@ -43,11 +43,10 @@
     { "src": "/performance-fixes", "dest": "/packages/week5/task/index.html" },
     { "src": "/performance-fixes/(.*)", "dest": "/packages/week5/task/$1" },
     
-    { "src": "/api/auth/(.*)", "dest": "/packages/week2/task1/backend/api/index.js" },
-    { "src": "/api/notes/(.*)", "dest": "/packages/week2/task1/backend/api/index.js" },
-    { "src": "/api/notes", "dest": "/packages/week2/task1/backend/api/index.js" },
-    { "src": "/api/(.*)", "dest": "/packages/week2/task3/modern-app/api/index.js" },
-    { "src": "/api", "dest": "/packages/week2/task3/modern-app/api/index.js" },
+    { "src": "/notesapi/(.*)", "dest": "/packages/week2/task1/backend/api/index.js" },
+    { "src": "/notesapi", "dest": "/packages/week2/task1/backend/api/index.js" },
+    { "src": "/modernApi/(.*)", "dest": "/packages/week2/task3/modern-app/api/index.js" },
+    { "src": "/modernApi", "dest": "/packages/week2/task3/modern-app/api/index.js" },
     
     { "src": "/assets/(.*)", "dest": "/apps/main/assets/$1" },
     { "src": "/task/(.*)", "dest": "/apps/main/index.html" },
