--- a/vercel.json
+++ b/vercel.json
@@ -23,6 +23,10 @@
     {
       "src": "packages/week2/task1/backend/package.json",
       "use": "@vercel/node"
+    },
+    {
+      "src": "packages/sampleapi/index.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
@@ -39,6 +43,7 @@
     { "src": "/performance-fixes", "dest": "/packages/week5/task/index.html" },
     { "src": "/performance-fixes/(.*)", "dest": "/packages/week5/task/$1" },
     
+    { "src": "/sampleapi(.*)", "dest": "/packages/sampleapi/index.js" },
     { "src": "/api/(.*)", "dest": "/packages/week2/task1/backend/$1" },
     
     { "src": "/assets/(.*)", "dest": "/apps/main/assets/$1" },
