--- a/vercel.json
+++ b/vercel.json
@@ -27,6 +27,10 @@
     {
       "src": "packages/sampleapi/index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "packages/week2/task3/modern-app/api/index.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
@@ -44,6 +48,7 @@
     { "src": "/performance-fixes/(.*)", "dest": "/packages/week5/task/$1" },
     
     { "src": "/sampleapi(.*)", "dest": "/packages/sampleapi/index.js" },
+    { "src": "/modernapi(.*)", "dest": "/packages/week2/task3/modern-app/api/index.js" },
     { "src": "/api/(.*)", "dest": "/packages/week2/task1/backend/$1" },
     
     { "src": "/assets/(.*)", "dest": "/apps/main/assets/$1" },
