--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -14,12 +14,15 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.2",
     "@mui/system": "^7.1.1",
+    "@react-three/drei": "^9.88.0",
+    "@react-three/fiber": "^8.15.0",
     "@types/react-router-dom": "^5.3.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^19.1.0",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.1",
+    "three": "^0.160.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
