--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -15,8 +15,9 @@
     "@mui/material": "^7.1.2",
     "@mui/system": "^7.1.1",
     "@react-three/drei": "^9.88.0",
-    "@react-three/fiber": "^8.15.0",
+    "@react-three/fiber": "^8.16.8",
     "@types/react-router-dom": "^5.3.3",
+    "framer-motion": "^12.19.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
